<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".prescriptionEditor">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintDimensionRatio="1:1"/>

    <EditText
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:hint="@string/prescriptionNameFieldHint"/>

    <EditText
        android:id="@+id/dosageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:hint="@string/prescriptionDosageFieldHint"/>

    <EditText
        android:id="@+id/remainingDosesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:hint="@string/prescriptionRemainingDosesFieldHint"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"/>

</LinearLayout>